<resources>
    <string name="app_name">UniFocus</string>
    <string name="meus_projetos">Meus Projetos</string>
    <string name="novo_projeto">Novo Projeto</string>
    <string name="detalhes_projeto">Detalhes do Projeto</string>
    <string name="nome_projeto">Nome do Projeto</string>
    <string name="disciplina">Disciplina</string>
    <string name="data_inicio">Data de Início</string>
    <string name="data_entrega">Data de Entrega</string>
    <string name="dia_estudo">Dia de Estudo</string>
    <string name="horario_inicio">Horário de Início</string>
    <string name="horario_termino">Horário de Término</string>
    <string name="observacoes">Observações</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ver_detalhes">Ver detalhes</string>
    <string name="adicionar_calendario">Adicionar ao Calendário</string>
    <string name="voltar">Voltar</string>
    <string name="concluido">Concluído</string>
    <string name="inicio">Início</string>
    <string name="projetos">Projetos</string>
    <string name="perfil">Perfil</string>
    <string name="hint_nome_projeto">Ex.: Trabalho de Banco de Dados</string>
    <string name="hint_disciplina">Selecione a disciplina</string>
    <string name="hint_data">dd/mm/aaaa</string>
    <string name="hint_dia_estudo">Selecione o dia da semana</string>
    <string name="hint_horario">hh:mm</string>
    <string name="label_disciplina">Disciplina: %1$s</string>
    <string name="label_entrega">Entrega: %1$s</string>
    <string name="no_observations">Nenhuma observação.</string>
    <string name="project_saved">Projeto salvo com sucesso!</string>
    <string name="fill_project_name">Por favor, preencha o nome do projeto.</string>
    <string name="added_to_calendar">Adicionado ao calendário!</string>
</resources>